Html og CSS lavet - færdigt.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
     <p>Oplev København!</p>
 
     <nav>
-        <div class="menu-button">☰ Menu</div>
+        <div class="menu-button">☰ Attraktioner</div>
         <ul>
             <li> <a href="http://localhost:8080/attractions/den%20lille%20havfrue">Den Lille Havfrue</a> </li>
             <li> <a href="http://localhost:8080/attractions/nyhavn">Nyhavn</a></li>
@@ -24,7 +24,7 @@
     </nav>
 
     <div>
-        <a href="http://localhost:8080/attractions">View all</a>
+        <a href="http://localhost:8080/attractions">Vis alle</a>
     </div>
 
 </header>
@@ -51,15 +51,14 @@
 
     <img src="/static/images/tivoli_sommer_svingkarrusellen_blomster_2022_003004_1.jpg" alt="Tivoli i København">
 
-    <p>
-        <br>
-        <div> Links og andet: </div>
-        <a href="https://www.rejseplanen.dk/">Rejseplanen</a>
-        <br>
-        <a href="https://www.visitcopenhagen.dk/">Find oplevelser i København og Danmark</a>
-    <br>
-    </p>
 
+
+
+    <div class="section-title">Links:</div>
+    <ul>
+        <li> <a href="https://www.rejseplanen.dk/">Rejseplanen</a> </li>
+        <li> <a href="https://www.visitcopenhagen.dk/">Find oplevelser i København og Danmark</a> </li>
+    </ul>
 
 </main>
 <footer>
